px4_ws/logs/rgbd_slam/build.make.029.log
[  0%] Built target roscpp_generate_messages_lisp
[  0%] Built target rosgraph_msgs_generate_messages_lisp
[  0%] [  0%] [  0%] [  0%] Built target roscpp_generate_messages_cpp
[  0%] Built target roscpp_generate_messages_py
Built target rosgraph_msgs_generate_messages_py
Built target geometry_msgs_generate_messages_lisp
Built target std_msgs_generate_messages_py
[ 83%] [ 83%] Built target frontend
[ 83%] Built target geometry_msgs_generate_messages_py
[ 83%] Built target std_msgs_generate_messages_lisp
Built target std_msgs_generate_messages_cpp
[ 83%] Built target rosgraph_msgs_generate_messages_cpp
[ 83%] Built target geometry_msgs_generate_messages_cpp
[ 91%] [32mBuilding CXX object CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp: In constructor 'RosHandler::RosHandler()':
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp:15:66: error: 'gpeCallback' is not a member of 'RosHandler'
  _gpe_sub = _nh.subscribe("/mavros/global_position/rel_alt",100,&RosHandler::gpeCallback,this);
                                                                  ^
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp: At global scope:
/home/odroid/MAV-Project/px4_ws/src/rgbd_slam/src/RosHandler.cpp:58:58: error: no 'void RosHandler::gpeCallback(std_msgs::Float64)' member function declared in class 'RosHandler'
 void RosHandler::gpeCallback(const std_msgs::Float64 data)
                                                          ^
make[2]: *** [CMakeFiles/rgbd_slam.dir/src/RosHandler.cpp.o] Error 1
make[1]: *** [CMakeFiles/rgbd_slam.dir/all] Error 2
make: *** [all] Error 2
